# HANDY

./: .gitignore  .gitmodules  README.md  pyproject.toml
projects/spatial_memory/: robot_test.py
projects/vision_controller/: estimator_with_mp.py  interactive_aiworker.py  motionplanner_aiworker.py  movetest.py  movetest_pd.py  temp.py
projects/vision_controller/demos/PickCube-v1/teleop/: trajectory.json
src/handy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mani_skill_core/robots/robotis_ai_worker/: ai_worker.py
src/vision_controller/scripts/: pose_joint_estimator.py  pose_joint_estimator_mp.py  pose_joint_estimator_openpose.py  run.sh  run_openpose.py
src/vision_controller/scripts/models/: split_zip_caffemodel.sh  unzip_split_caffemodel.sh
src/vision_controller/scripts/openpose_wrapper/openpose/: Makefile  cmake_install.cmake
