[project]
name = "handy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mani-skill",
    "torch>=2.7.1",
]

[tool.uv.sources]
mani-skill = { path = "third_party/ManiSkill" }



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
